src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AVSFQB__Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <length>41</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Fax__c</fullName>
        <label>Fax</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__First_Name__c</fullName>
        <label>First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Open_Balance__c</fullName>
        <label>QB Open Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QB_Error__c</fullName>
        <label>QB Error</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QuickBooks_Customer_Type__c</fullName>
        <label>QuickBooks Customer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Quickbooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Zip__c</fullName>
        <label>Shipping Zip</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Terms__c</fullName>
        <label>Terms</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>